examples with chest

--- a/examples/Advanced segmentation.ipynb
+++ b/examples/Advanced segmentation.ipynb
@@ -60,8 +60,7 @@
     "\n",
     "import lisa.body_navigation as bona\n",
     "#from lisa import volumetry_evaluation\n",
-    "#import tiled_liver_statistics as lst\n",
-    "\n"
+    "#import tiled_liver_statistics as lst"
    ]
   },
   {
@@ -109,9 +108,7 @@
     "        import re\n",
     "        numeric_label = re.search(\".*g(\\d+)\", oname).group(1)\n",
     "        out = (numeric_label, vs_mm, oname, orig_data, rname, ref_data)\n",
-    "        yield out\n",
-    "        \n",
-    "    "
+    "        yield out"
    ]
   },
   {
@@ -204,7 +201,7 @@
     "    \n",
     "    plt.subplot(122)\n",
     "    profilet = ss.get_diaphragm_profile_image()\n",
-    "    plt.imshow(profilet, cmap='jet')\n"
+    "    plt.imshow(profilet, cmap='jet')"
    ]
   },
   {
@@ -280,8 +277,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "inner_body = scipy.ndimage.morphology.binary_erosion(ss.body, iterations=30)\n",
     "\n",
     "plt.figure(figsize=(5,5))\n",
@@ -338,7 +333,7 @@
     "    data3dr,\n",
     "    #ss.body[::15,:,:],\n",
     "    #dst[::15,:,:],\n",
-    "    spine, slice_step=10, axis=0)\n"
+    "    spine, slice_step=10, axis=0)"
    ]
   },
   {
@@ -465,8 +460,7 @@
     "        orig_data + 400*seg.astype(int), \n",
     "        #ss.body[::15,:,:],\n",
     "        #dst[::15,:,:],\n",
-    "        seg, slice_step=10, axis=0)\n",
-    "    \n"
+    "        seg, slice_step=10, axis=0)"
    ]
   },
   {
@@ -496,13 +490,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'i' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-15-f67f5d211314>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m131\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morig_fnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0mprofilet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_diaphragm_profile_image_with_empty_areas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mprofilet0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprofilet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
+     ],
+     "output_type": "error"
     },
     {
      "data": {
@@ -655,8 +649,7 @@
     "ref_fnames = glob.glob(sliver_reference_dir + \"*seg*[1-4].mhd\")\n",
     "\n",
     "orig_fnames.sort()\n",
-    "ref_fnames.sort()\n",
-    "\n"
+    "ref_fnames.sort()"
    ]
   },
   {
@@ -686,7 +679,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "import bodynavigation.body_navigation as bona"
    ]
   },
@@ -778,7 +770,7 @@
     "    except:\n",
     "        import traceback\n",
     "        traceback.print_exc()\n",
-    "        print traceback.format_exc()\n"
+    "        print traceback.format_exc()"
    ]
   },
   {
@@ -788,7 +780,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -800,7 +794,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -811,5 +805,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
