modified:   examples/organ_detection.ipynb + few minor edits

--- a/examples/organ_detection.ipynb
+++ b/examples/organ_detection.ipynb
@@ -286,6 +286,95 @@
     "\n",
     "show_segmented_slices(data3d, seg, axis=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using from commandline\n",
+    "\n",
+    "```\n",
+    "usage: organ_detection.py [-h] [-i DATADIR] [-r READYDIR] [--dump DUMP]\n",
+    "                          [--draw DRAW] [-d]\n",
+    "\n",
+    "Organ Detection\n",
+    "\n",
+    "optional arguments:\n",
+    "  -h, --help            show this help message and exit\n",
+    "  -i DATADIR, --datadir DATADIR\n",
+    "                        path to data dir\n",
+    "  -r READYDIR, --readydir READYDIR\n",
+    "                        path to ready data dir (for testing)\n",
+    "  --dump DUMP           process and dump all data to path and exit\n",
+    "  --draw DRAW           draw and show segmentation results for specified\n",
+    "                        parts. example: \"bones,vessels,lungs\"\n",
+    "  -d, --debug           run in debug mode\n",
+    "```\n",
+    "\n",
+    "Example commands:\n",
+    "\n",
+    "```\n",
+    ".../bodynavigation $ python -m bodynavigation.organ_detection -i ./3Dircadb1.1 --dump ./READY_DATA\n",
+    ".../bodynavigation $ python -m bodynavigation.organ_detection -d -r ./READY_DATA/3Dircadb1.1 --draw bones\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mass processing of datasets\n",
+    "\n",
+    "Script to process datasets in mass is located in scripts/batch_organ_detection.py. \n",
+    "\n",
+    "It requires a directory with subdirectories that have data to be processed. --parts parameter defines what parts should be segmented/analysed. --dump parameter is required if you want to save processed data. --outputdir parameter defines where to put images created by ResultsDrawer class. Setting --threads to number of CPU cores speeds up processing (as long as you have enough RAM).\n",
+    "\n",
+    "```\n",
+    "usage: batch_organ_detection.py [-h] [-i DATADIRS] [-o OUTPUTDIR] [-t THREADS]\n",
+    "                                [-m MEMORYLIMIT] [-p PARTS] [--dump DUMP]\n",
+    "                                [-r READYDIRS] [--drawsolid] [-d]\n",
+    "\n",
+    "Batch Processing. Needs to be SIGKILLed to terminate\n",
+    "\n",
+    "optional arguments:\n",
+    "  -h, --help            show this help message and exit\n",
+    "  -i DATADIRS, --datadirs DATADIRS\n",
+    "                        path to dir with data dirs\n",
+    "  -o OUTPUTDIR, --outputdir OUTPUTDIR\n",
+    "                        path to output dir\n",
+    "  -t THREADS, --threads THREADS\n",
+    "                        How many processes (CPU cores) to use. Max expected\n",
+    "                        MEM usage for abdomen only data is around 2GB, for\n",
+    "                        whole body data it's around 5GB.\n",
+    "  -m MEMORYLIMIT, --memorylimit MEMORYLIMIT\n",
+    "                        How many GB of VIRTUAL memory are individual threads\n",
+    "                        allowed before they are terminated. Might only work on\n",
+    "                        Unix systems. Default is unlimited\n",
+    "  -p PARTS, --parts PARTS\n",
+    "                        Body parts to process sparated by \",\", Use \"None\" to\n",
+    "                        disable, defaults: \"bones_stats,vessels,vessels_stats\"\n",
+    "  --dump DUMP           dump all processed data to dir in path\n",
+    "  -r READYDIRS, --readydirs READYDIRS\n",
+    "                        path to dir with dirs with preporcessed data3d.dcm and\n",
+    "                        masks\n",
+    "  --drawsolid           Drawn segmented data are not transparent and have\n",
+    "                        depth\n",
+    "  -d, --debug           run in debug mode\n",
+    "```\n",
+    "\n",
+    "Example command:\n",
+    "\n",
+    "```\n",
+    ".../bodynavigation/scripts $ python batch_organ_detection.py -d -o ./batch_output/ -i ../test_data_3Dircadb1/ -r ../READY_DIR_NEW/ --dump ../READY_DIR_NEW/ -p lungs,bones,bones_stats,kidneys,vessels -t 4\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
