organ_detection - getBody and getFatlessbody cleaned + few minor edits

--- a/examples/organ_detection.ipynb
+++ b/examples/organ_detection.ipynb
@@ -295,7 +295,7 @@
     "\n",
     "```\n",
     "usage: organ_detection.py [-h] [-i DATADIR] [-r READYDIR] [--dump DUMP]\n",
-    "                          [--draw DRAW] [-d]\n",
+    "                          [--draw DRAW] [--drawdepth] [--show SHOW] [-d]\n",
     "\n",
     "Organ Detection\n",
     "\n",
@@ -308,6 +308,9 @@
     "  --dump DUMP           process and dump all data to path and exit\n",
     "  --draw DRAW           draw and show segmentation results for specified\n",
     "                        parts. example: \"bones,vessels,lungs\"\n",
+    "  --drawdepth           draw image in solid depth mode.\n",
+    "  --show SHOW           Show one specific segmented part with sed3 viewer.\n",
+    "                        example: \"bones\"\n",
     "  -d, --debug           run in debug mode\n",
     "```\n",
     "\n",
@@ -332,7 +335,7 @@
     "```\n",
     "usage: batch_organ_detection.py [-h] [-i DATADIRS] [-o OUTPUTDIR] [-t THREADS]\n",
     "                                [-m MEMORYLIMIT] [-p PARTS] [--dump DUMP]\n",
-    "                                [-r READYDIRS] [--drawsolid] [-d]\n",
+    "                                [-r READYDIRS] [--drawdepth] [-d]\n",
     "\n",
     "Batch Processing. Needs to be SIGKILLed to terminate\n",
     "\n",
@@ -357,8 +360,7 @@
     "  -r READYDIRS, --readydirs READYDIRS\n",
     "                        path to dir with dirs with preporcessed data3d.dcm and\n",
     "                        masks\n",
-    "  --drawsolid           Drawn segmented data are not transparent and have\n",
-    "                        depth\n",
+    "  --drawdepth           draw image in solid depth mode.\n",
     "  -d, --debug           run in debug mode\n",
     "```\n",
     "\n",
