basic data registration; still needs testing (and bugfixes)

--- a/examples/results_drawer.ipynb
+++ b/examples/results_drawer.ipynb
@@ -73,7 +73,7 @@
     "obj = OrganDetection(data3d, voxelsize)\n",
     "masks = [ obj.getPart(p) for p in [\"bones\",\"lungs\",\"kidneys\"] ]\n",
     "bones_stats = obj.analyzeBones()\n",
-    "points = [bones_stats[\"spine\"], bones_stats[\"hip_start\"]]"
+    "points = [bones_stats[\"spine\"], bones_stats[\"hips_start\"]]"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "\n",
     "point_sets = []\n",
     "point_sets.append([bones_stats[\"spine\"], {\"color\":(255,0,0), \"size\":3}])\n",
-    "point_sets.append([bones_stats[\"hip_start\"], {\"color\":(0,128,128), \"size\":7, \"border\":(255,255,0)}])\n",
+    "point_sets.append([bones_stats[\"hips_start\"], {\"color\":(0,128,128), \"size\":7, \"border\":(255,255,0)}])\n",
     "\n",
     "rd = ResultsDrawer(default_volume_alpha = 128)\n",
     "img = rd.drawImage(data3d, voxelsize, volume_sets = volume_sets, point_sets = point_sets)\n",
